--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "react/stream": "~0.4.0|~0.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0 || ^4.8"
+        "clue/redis-react": "^0.5",
+        "phpunit/phpunit": "^5.0 || ^4.8",
+        "react/socket-client": "^0.5"
     }
 }
