--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "react/stream": "~0.4.0|~0.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^5.0 || ^4.8"
     }
 }
