--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
+  - 7.3
+  - 7.4
 
-# also test against HHVM, but require "trusty" and ignore errors
-matrix:
-  include:
-    - php: hhvm
-      dist: trusty
-  allow_failures:
-    - php: hhvm
+# lock distro so new future defaults will not break the build
+dist: trusty
+
+sudo: false
 
 install:
   - composer install --no-interaction
