--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+  - 5.3
   - 5.4
   - 5.5
   - 5.6
@@ -8,12 +9,9 @@ php:
   - 7.1
   - 7.2
   - 7.3
-  - 7.4
 
 # lock distro so new future defaults will not break the build
-dist: trusty
-
-sudo: false
+dist: precise
 
 install:
   - composer install --no-interaction
