--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
     "name": "clue/sse-react",
     "description": "Streaming, async HTML5 Server-Sent Events server (aka. SSE or EventSource)",
-    "keywords": ["Server-Sent Events", "SSE", "EventSource", "event-driven", "ReactPHP", "async"],
+    "keywords": [
+        "Server-Sent Events",
+        "SSE",
+        "EventSource",
+        "event-driven",
+        "ReactPHP",
+        "async"
+    ],
     "homepage": "https://github.com/clue/php-sse-react",
     "license": "MIT",
     "authors": [
@@ -11,16 +18,18 @@
         }
     ],
     "autoload": {
-        "psr-4": { "Clue\\React\\Sse\\": "src/" }
+        "psr-4": {
+            "Clue\\React\\Sse\\": "src/"
+        }
     },
     "require": {
-        "php": ">=5.3",
-        "react/event-loop": "^1.0",
-        "react/http": "^1.0",
-        "react/stream": "^1.0"
+        "php": ">=7.4",
+        "react/event-loop": "^1.2",
+        "react/http": "^1.5",
+        "react/stream": "^1.2"
     },
     "require-dev": {
-        "clue/redis-react": "^2.4",
-        "phpunit/phpunit": "^5.0 || ^4.8"
+        "clue/redis-react": "^2.5",
+        "phpunit/phpunit": "^9.5"
     }
 }
